<resources>
    <string name="app_name">OpenWeatherSampleMVVM</string>

    //Lottie
    <string name="lottie_loading_url">https://assets2.lottiefiles.com/packages/lf20_kxsd2ytq.json</string>
    <string name="lottie_network_failure_url">https://assets6.lottiefiles.com/packages/lf20_93UheN.json</string>

    //Location permissions
    <string name="accept_permission">You should accept permissions to see app\'s content</string>
    <string name="enable_gps">You should enable GPS Location to see app\'s content</string>

    //WeatherFragment
    <string name="city_tv">%1$s. %2$s</string>
    <string name="temp_tv">%1$s º</string>
    <string name="low_high_temp_tv">%1$s º</string>
    <string name="week_forecast">7-Day weather forecast</string>
    <string name="windchill_factor">Windchill factor</string>
    <string name="humidity">Humidity</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="humidity_tv">%1$s%%</string>
    <string name="windchill_tv">%1$sº</string>
    <string name="cloudiness_tv">%1$s%%</string>
    <string name="pressure">Pressure</string>
    <string name="wind_speed">Wind speed</string>
    <string name="visibility">Visibility</string>
    <string name="pressure_tv">%1$shPa</string>
    <string name="wind_speed_tv">%1$s m/s</string>
    <string name="visibility_tv">%1$sm</string>

    //ForecastFragment
    <string name="forecast_city_title">Next 7 days in %1$s</string>
    <string name="tomorrow">Tomorrow</string>


</resources>